--- a/recommender/static/style.css
+++ b/recommender/static/style.css
@@ -11,35 +11,47 @@ body {
   max-width: 100vw;
 }
 
-.container {
-  position: relative;
-  top: 2vh;
-  margin: 0px;
-  padding: 5px;
-  text-align: center;
-}
-
-.slider {
-  width: 40%;
-  height: 40%;
-  min-width: 360px;
-  position: relative;
-  opacity: 0.8;
-  border-radius: 15px;
-  margin-top: 5px;
-}
-.app-title {
-  position: relative;
-  top: 0%;
+nav {
   width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: right;
   background: rgba(0, 0, 0, 0.8);
   color: white;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-bottom: 4px;
-  padding: 10px;
-  font-size: calc(15px+0.8vh);
-  overflow: hidden;
-  text-shadow: 1px 1px rgb(100, 100, 100);
+  padding: 5px;
+}
+nav img {
+  position: absolute;
+  left: 10px;
+  width: 25px;
+  top: 15px;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: right;
+  background: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 5px;
+}
+nav img {
+  position: absolute;
+  left: 10px;
+  width: 25px;
+  top: 15px;
+}
+
+input[type="submit"] {
+  width: 140px;
+  height: 40px;
+  border-radius: 5px;
+  background: orangered;
+  color: white;
+  border: 1px solid rgb(255, 0, 34);
+  text-align: center;
+  margin: 4px 2px;
 }
 
 input[type="text"] {
@@ -51,36 +63,22 @@ input[type="text"] {
   border: 1px solid white;
   border-radius: 2px;
 }
-input[type="submit"] {
-  margin: 2px;
-  margin-left: 0px;
-  padding: 10px;
-  width: 100px;
-  background: orangered;
-  color: white;
-  border-radius: 5px;
-  border: 1px solid rgb(255, 255, 255);
-  box-shadow: 0px;
-}
 
 input[type="submit"]:hover {
-  background-color: rgb(255, 230, 0);
+  background-color: rgb(25, 25, 25);
 }
-.about-movie {
+
+.container {
   position: relative;
-  top: 0vh;
-  text-align: center;
-  width: 100%;
+  top: 2vh;
+  margin: 0px;
+  margin-top: 65px;
   padding: 5px;
-  color: aliceblue;
-  background: rgba(0, 0, 0, 0.7);
-  font-family: Verdana;
-  font-size: calc(10px + 0.5vw);
+  text-align: center;
 }
 
 img {
   width: 97%;
-  /* border: 1px solid white; */
   margin-bottom: 2px;
   border-radius: 4px;
 }
@@ -95,6 +93,17 @@ img {
   top: 0vh;
   text-align: center;
   color: white;
+}
+
+.message {
+  text-align: center;
+  position: relative;
+  font-size: calc(12px + 1.5vw);
+  margin-top: 20px;
+  padding: 0px;
+  font-family: "Lucida Sans";
+  color: white;
+  overflow: hidden;
 }
 .content {
   text-align: center;
