--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -4847,7 +4847,7 @@
                 
         
             </datalist>
-            <input type="submit" value="Search" class="search_btn" name="search_btn" style="max-width: 80px;">
+            <input type="submit" value="Search" id="search_btn">
         </form>
       </div>
     </div>
