--- a/register/templates/login.html
+++ b/register/templates/login.html
@@ -33,7 +33,7 @@
 
 
     <div class="container">
-        <form  method="post" action="/homepage">
+        <form  method="post" action="/login">
             {% csrf_token %}
                 <div class="crispyforms-login">
                     {% load crispy_forms_tags %}
