--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -25,11 +25,7 @@
     </nav>
 
     <div class="message">
-      {% if messages %}
-        {% for message in messages%}
-          <label>{{message}}<br>Welcome to</label>
-        {% endfor %}
-      {% endif%}
+      <label> Hi👋{{person}}<br>Welcome to</label>
       <br><br>
       <strong>Django Movie Recommender System</strong> 
     </div>
