--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="message">
-      <label> Hi👋{{person}}<br>Welcome to</label>
+      <label> Hi👋{{user}}<br>Welcome to</label>
       <br><br>
       <strong>Django Movie Recommender System</strong> 
     </div>
