--- a/register/static/style1.css
+++ b/register/static/style1.css
@@ -60,18 +60,22 @@ input[type="submit"] {
 
 input.login[type="submit"]:hover {
   background-color: rgb(25, 25, 25);
+  color: red;
 }
 
 input.logout[type="submit"]:hover {
   background-color: rgb(25, 25, 25);
+  color: red;
 }
 
 input.create[type="submit"]:hover {
   background-color: rgb(25, 25, 25);
+  color: red;
 }
 
 input.submit_btn[type="submit"]:hover {
   background-color: rgb(25, 25, 25);
+  color: red;
 }
 .crispyforms,
 .crispyforms-login {
