--- a/recommender/static/style.css
+++ b/recommender/static/style.css
@@ -25,6 +25,7 @@ nav img {
   left: 10px;
   width: 25px;
   top: 15px;
+  border: 1px solid inherit;
 }
 
 nav {
@@ -94,11 +95,6 @@ input[type="submit"]:hover {
   text-align: center;
 }
 
-img {
-  width: 97%;
-  margin-bottom: 2px;
-}
-
 .trailor {
   text-align: left;
   color: white;
@@ -106,7 +102,7 @@ img {
   padding: 4px 6px;
   margin: 0px 1.5% 0px 1.5%;
   border: 1px solid white;
-  font-family: "Lucida Sans";
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .trailor a {
@@ -155,9 +151,10 @@ img {
 }
 
 .content img {
+  width: 97%;
+  margin-bottom: -3px;
   border: 1px solid white;
 }
-
 .footer {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
