--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -4862,8 +4862,11 @@
             <div class="trailor">
               <a href="https://www.youtube.com/embed/{{value|last}}?autoplay=0&autohide=2&border=0&wmode=opaque&enablejsapi=1&modestbranding=1&controls=1&showinfo=1&mute=0">Watch Trailor ▶️ </a>
             </div>
-              <a href="https://www.imdb.com/find?q={{key}}&ref_=nv_sr_sm"><img src="{{value|first}}"><br></a>
-              <label style="color: inherit">{{key}}</label><br>
+              <a href="https://www.imdb.com/find?q={{key}}&ref_=nv_sr_sm"><img src="{{value|first}}" alt="error"></a>
+            <!-- <hr style="color:green"> -->
+            <div class="trailor">
+              <a href="#">{{key}}</a>      
+            </div>
           </div>      
       {% endfor %}
   
