--- a/recommender/static/style.css
+++ b/recommender/static/style.css
@@ -86,6 +86,17 @@ input[type="submit"]:hover {
   color: yellow;
 }
 
+.message {
+  text-align: center;
+  position: relative;
+  font-size: calc(13px + 1.2vw);
+  margin-top: 30px;
+  padding: 5px;
+  font-family: Cambria;
+  color: white;
+  overflow: hidden;
+}
+
 .container {
   position: relative;
   top: 1.8vh;
@@ -111,7 +122,7 @@ input[type="submit"]:hover {
 }
 .movielist {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   max-width: 80%;
   left: 10%;
   align-items: center;
@@ -121,15 +132,23 @@ input[type="submit"]:hover {
   color: white;
 }
 
-.message {
-  text-align: center;
-  position: relative;
-  font-size: calc(13px + 1.2vw);
-  margin-top: 40px;
-  padding: 5px;
-  font-family: Cambria;
-  color: white;
-  overflow: hidden;
+/* newly added */
+
+@media only screen and (max-width: 800px) {
+  .movielist {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 80%;
+    left: 10%;
+    align-items: center;
+    position: relative;
+    top: 0vh;
+    text-align: center;
+    color: white;
+  }
 }
 .content {
   text-align: center;
@@ -137,8 +156,8 @@ input[type="submit"]:hover {
   position: relative;
   overflow: hidden;
   top: 6vh;
-  width: 98%;
-  left: 1%;
+  width: 97%;
+  left: 0.5%;
   padding: 8px 2px;
   margin: 4px 0px;
   background: inherit;
