--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -27,7 +27,7 @@
     <div class="message">
       <label> Hi, {{user}}!<br>Welcome to</label>
       <br>
-      <strong style="color: yellow;">Django Movie Recommender System</strong> 
+      <strong>Django Movie Recommender System</strong> 
     </div>
 
     <div class="container">
@@ -4846,15 +4846,13 @@
     </div>
 
 
-    
-    <div class="message">
-      {% if status %}
-        <label>You searched for '{{movie_name}}'</label><br><br>
-        <hr style="width:80%;position:relative;left:10%;"><br>
-        <strong style="color: yellow;">YOU MAY ALSO LIKE</strong>
-      {% endif %}
+    {% if status %}
+    <div class="message"> 
+        <label>You searched for <strong>{{movie_name}}</strong></label><br><br>
+        <!-- <hr color="black" style="width: 70%;position:relative;left:15%"><br> -->
+        <strong style="color: darkcyan;text-shadow:1px 1px 1px white">YOU MAY ALSO LIKE</strong><br>
     </div>
-    
+    {% endif %}
 
     <div class="movielist">
       {% for key,value in result.items %}
@@ -4862,8 +4860,7 @@
             <div class="trailor">
               <a href="https://www.youtube.com/embed/{{value|last}}?autoplay=0&autohide=2&border=0&wmode=opaque&enablejsapi=1&modestbranding=1&controls=1&showinfo=1&mute=0">Watch Trailor ▶️ </a>
             </div>
-              <a href="https://www.imdb.com/find?q={{key}}&ref_=nv_sr_sm"><img src="{{value|first}}" alt="error"></a>
-            <!-- <hr style="color:green"> -->
+              <a href="https://www.imdb.com/find?q={{key}}&ref_=nv_sr_sm"><img src="{{value|first}}" alt="Poster missing:("></a>
             <div class="trailor">
               <a href="#">{{key}}</a>      
             </div>
