--- a/recommender/static/style.css
+++ b/recommender/static/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: linear-gradient(to bottom left, navy, purple);
+  background: rgb(200, 200, 200);
   backdrop-filter: blur(10px);
   min-height: 100vh;
   max-width: 100vw;
@@ -50,7 +50,7 @@ input[type="submit"] {
   border-radius: 5px;
   background: yellow;
   color: black;
-  border: 1px solid yellow;
+  border: 1px solid black;
   text-align: center;
   margin: 4px 2px;
 }
@@ -59,16 +59,18 @@ input[type="submit"] {
   width: 80px;
   height: 39px;
   border-radius: 2px;
-  background: rgb(242, 255, 0);
-  color: black;
-  border: 1px solid yellow;
+  background: darkcyan;
+  color: white;
+  border: 2px solid darkcyan;
   text-align: center;
+  border-radius: 4px;
   margin: 4px 2px;
 }
 
 #search_btn:hover {
   background-color: inherit;
-  color: yellow;
+  color: darkcyan;
+  border: 2px solid darkcyan;
 }
 
 input[type="text"] {
@@ -77,7 +79,8 @@ input[type="text"] {
   padding: 10px;
   width: 250px;
   text-align: center;
-  border: 1px solid yellow;
+  background: white;
+  border: 1px solid darkcyan;
   border-radius: 2px;
 }
 
@@ -93,7 +96,7 @@ input[type="submit"]:hover {
   margin-top: 30px;
   padding: 5px;
   font-family: Cambria;
-  color: white;
+  color: black;
   overflow: hidden;
 }
 
@@ -108,8 +111,7 @@ input[type="submit"]:hover {
 
 .trailor {
   text-align: left;
-  color: white;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgb(255, 255, 255);
   padding: 4px 6px;
   margin: 0px 1.5% 0px 1.5%;
   border: 1px solid white;
@@ -118,13 +120,14 @@ input[type="submit"]:hover {
 
 .trailor a {
   text-decoration: none;
-  color: white;
+  color: darkcyan;
 }
 .movielist {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  max-width: 80%;
-  left: 10%;
+  grid-column-gap: 5px;
+  max-width: 70%;
+  left: 15%;
   align-items: center;
   position: relative;
   top: 0vh;
@@ -132,13 +135,24 @@ input[type="submit"]:hover {
   color: white;
 }
 
+.content {
+  text-align: center;
+  content: “ ”;
+  position: relative;
+  overflow: hidden;
+  padding: 2px 2px;
+  background: inherit;
+  border-radius: 0px;
+  overflow: hidden;
+  font-size: 12px;
+  font-family: Roboto Mono;
+  color: yellow;
+  font-weight: bold;
+}
 /* newly added */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
   .movielist {
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     max-width: 80%;
@@ -149,24 +163,13 @@ input[type="submit"]:hover {
     text-align: center;
     color: white;
   }
-}
-.content {
-  text-align: center;
-  content: “ ”;
-  position: relative;
-  overflow: hidden;
-  top: 6vh;
-  width: 97%;
-  left: 0.5%;
-  padding: 8px 2px;
-  margin: 4px 0px;
-  background: inherit;
-  border-radius: 5px;
-  overflow: hidden;
-  font-size: 16px;
-  font-family: Cambria;
-  color: yellow;
-  font-weight: bold;
+  .content {
+    font-size: 15px;
+  }
+  .message {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
 }
 
 .content img {
