--- a/recommender/static/style.css
+++ b/recommender/static/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: rgb(200, 200, 200);
+  /* background: rgb(200, 200, 200); */
   backdrop-filter: blur(10px);
   min-height: 100vh;
   max-width: 100vw;
@@ -16,24 +16,7 @@ nav {
   display: flex;
   position: relative;
   justify-content: right;
-  background: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 5px;
-}
-nav img {
-  position: absolute;
-  left: 10px;
-  width: 25px;
-  top: 15px;
-  border: 1px solid inherit;
-}
-
-nav {
-  width: 100%;
-  display: flex;
-  position: relative;
-  justify-content: right;
-  background: rgba(0, 0, 0, 0.8);
+  background: black;
   color: white;
   padding: 5px;
 }
@@ -48,9 +31,9 @@ input[type="submit"] {
   width: 140px;
   height: 40px;
   border-radius: 5px;
-  background: yellow;
-  color: black;
-  border: 1px solid black;
+  background: red;
+  color: white;
+  border: 1px solid red;
   text-align: center;
   margin: 4px 2px;
 }
@@ -80,13 +63,13 @@ input[type="text"] {
   width: 250px;
   text-align: center;
   background: white;
-  border: 1px solid darkcyan;
-  border-radius: 2px;
+  border: 2px solid darkcyan;
+  border-radius: 4px;
 }
 
 input[type="submit"]:hover {
   background-color: black;
-  color: yellow;
+  color: red;
 }
 
 .message {
@@ -115,17 +98,17 @@ input[type="submit"]:hover {
   padding: 4px 6px;
   margin: 0px 1.5% 0px 1.5%;
   border: 1px solid white;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .trailor a {
   text-decoration: none;
-  color: darkcyan;
+  color: black;
+  font-family: "Roboto", sans-serif;
 }
 .movielist {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-column-gap: 5px;
+  grid-row-gap: 5px;
   max-width: 70%;
   left: 15%;
   align-items: center;
@@ -145,9 +128,7 @@ input[type="submit"]:hover {
   border-radius: 0px;
   overflow: hidden;
   font-size: 12px;
-  font-family: Roboto Mono;
-  color: yellow;
-  font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 /* newly added */
 
@@ -175,12 +156,13 @@ input[type="submit"]:hover {
 .content img {
   width: 97%;
   margin-bottom: -3px;
+  border-radius: 4px;
   border: 1px solid white;
 }
 .footer {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: black;
   color: white;
-  font-family: Cambria;
+  font-family: "Roboto", sans-serif;
   width: 100%;
   text-align: center;
   padding: 27px 0px;
