--- a/recommender/templates/Homepage.html
+++ b/recommender/templates/Homepage.html
@@ -13,10 +13,8 @@
 <body>
 
     <nav>
-      <img src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png" alt="Py">
-      
+      <img src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png" alt="Py">    
       <img src="https://seeklogo.com/images/D/django-logo-F46C1DD95E-seeklogo.com.png" alt="movie" style="left: 40px;">
-      <img src="https://www.freepnglogos.com/uploads/film-reel-png/film-reel-the-movies-owens-valley-12.png" alt="Py"  style="left: 80px;">
 
       <form  action="/logout" method="post">
         {% csrf_token %}
@@ -4848,9 +4846,9 @@
 
     {% if status %}
     <div class="message"> 
-        <label>You searched for <strong>{{movie_name}}</strong></label><br><br>
-        <!-- <hr color="black" style="width: 70%;position:relative;left:15%"><br> -->
-        <strong style="color: darkcyan;text-shadow:1px 1px 1px white">YOU MAY ALSO LIKE</strong><br>
+        <label>You searched for <strong>{{movie_name}}</strong></label><br>
+        <strong style="color: darkcyan;text-shadow:1px 1px 1px white">YOU MAY ALSO LIKE</strong>
+        <hr color="black" style="width: 70%;position:relative;left:15%"><br><br>
     </div>
     {% endif %}
 
@@ -4858,11 +4856,11 @@
       {% for key,value in result.items %}
           <div class="content">
             <div class="trailor">
-              <a href="https://www.youtube.com/embed/{{value|last}}?autoplay=0&autohide=2&border=0&wmode=opaque&enablejsapi=1&modestbranding=1&controls=1&showinfo=1&mute=0">Watch Trailor ▶️ </a>
+              <a href="https://www.youtube.com/embed/{{value|last}}?autoplay=0&autohide=2&border=0&wmode=opaque&enablejsapi=1&modestbranding=1&controls=1&showinfo=1&mute=0"><label>Watch Trailor ▶️ </label></a>
             </div>
               <a href="https://www.imdb.com/find?q={{key}}&ref_=nv_sr_sm"><img src="{{value|first}}" alt="Poster missing:("></a>
             <div class="trailor">
-              <a href="#">{{key}}</a>      
+              <a href="#"><label>{{key}}</label></a>      
             </div>
           </div>      
       {% endfor %}
