--- a/register/templates/logout.html
+++ b/register/templates/logout.html
@@ -14,7 +14,6 @@
         <img src="http://assets.stickpng.com/images/5848152fcef1014c0b5e4967.png" alt="Py">
         
         <img src="https://seeklogo.com/images/D/django-logo-F46C1DD95E-seeklogo.com.png" alt="movie" style="left: 40px;">
-        <img src="https://www.freepnglogos.com/uploads/film-reel-png/film-reel-the-movies-owens-valley-12.png" alt="Py"  style="left: 80px;">
 
         <form  action="/register" method="post">
             {% csrf_token %}
@@ -32,7 +31,7 @@
     </div>
 
     <div class="container">
-        <label style="color: rgb(0, 0, 0);position:relative; left:22%"><a style="color: white;" href="/login" >Log In</a> again ?</label>
+        <label class="ok"><a style="color: navy;" href="/login" >Log In</a> again ?</label>
     </div>
 </body>
 </html>
