--- a/recommender/templates/Home.html
+++ b/recommender/templates/Home.html
@@ -18,7 +18,7 @@
 
     <div class="container-fluid">
         <div class="row text-center">
-            <div class="col-xl-4 col-12 text-white mx-auto my-3 py-5">
+            <div class="col-xl-4 col-12 text-white mx-auto my-3 py-3">
                 <form action="/output/" method="post" class="d-flex">
                     {% csrf_token %}
                     <input class="form-control me-2" type="search" placeholder="Enter A Movie Name Here" list="movie_name" name="movie_name">
@@ -4833,7 +4833,7 @@
     {% if not error %}
       <div class="container-fluid">
         <div class="row">
-          <div class="col text-center p-3">
+          <div class="col text-center p-2">
             {% if status %}
               <h4>Recommended Movies For You</h4>
             {% endif %}
@@ -4841,11 +4841,44 @@
         </div>
       </div>
 
+      {% if not status %}
+        <div class="container" style="width: 75%;min-width:500px;">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="http://source.unsplash.com/1000x400/?movies" class="d-block w-100" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="http://source.unsplash.com/1000x400/?websites" class="d-block w-100" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="http://source.unsplash.com/1000x400/?story" class="d-block w-100" alt="">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      {% endif %}
+      
+
+      
       <div class="container-fluid" style="overflow: hidden;">
         <div class="row p-2">
           {% for key,value in result.items %}
             <div class="col-xl-2 col-6 p-1">
-              <div class="card" style="width:15rem">
+              <div class="card">
                 <img src="{{value|first}}" class="card-img-top" alt="Poster not available">
                 <div class="card-body">
                   <h5 class="card-title">{{key}}</h5>
